--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,42 +1,50 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm run build --if-present
-    - run: npm run run
-    - name: Get Secrets from RevBits PAM
-      id: get-secrets
-      uses: revbits-github-actions
-      with:
-        pam_hostname: ${{ secrets.PAM_HOSTNAME }}
-        api_key: ${{ secrets.API_KEY }}
-        pam_secret_keys: ${{ secrets.SECRET_KEYS }}
-    - name: Display Outputs
-      run: |
-        echo "Hostname: ${{ steps.get-secrets.outputs.pam_hostname }}"
-        echo "API Key: ${{ steps.get-secrets.outputs.api_key }}"
-        echo "Secret Keys: ${{ steps.get-secrets.outputs.pam_secret_keys }}"
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build --if-present
+
+      - name: Start Application
+        run: npm run print
+
+      - name: Get Secrets from RevBits PAM
+        id: get-secrets
+        uses: revbits-github-actions
+        with:
+          pam_hostname: ${{ secrets.PAM_HOSTNAME }}
+          api_key: ${{ secrets.API_KEY }}
+          pam_secret_keys: ${{ secrets.SECRET_KEYS }}
+
+      - name: Display Secrets
+        run: |
+          echo "Hostname: ${{ steps.get-secrets.outputs.pam_hostname }}"
+          echo "API Key: ${{ steps.get-secrets.outputs.api_key }}"
+          echo "Secret Keys: ${{ steps.get-secrets.outputs.pam_secret_keys }}"
