--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js",
+    "print": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
